--- a/app/src/main/res/layout/server_code_trigger_detail_view.xml
+++ b/app/src/main/res/layout/server_code_trigger_detail_view.xml
@@ -19,24 +19,6 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical">
-
-            <!--<ImageButton-->
-            <!--android:layout_width="wrap_content"-->
-            <!--android:layout_height="wrap_content"-->
-            <!--android:src="@drawable/ic_delete_white_36dp"-->
-            <!--android:background="@drawable/oval_button"-->
-            <!--android:padding="4dp"-->
-            <!--/>-->
-            <!--<ImageButton-->
-            <!--android:layout_width="wrap_content"-->
-            <!--android:layout_height="wrap_content"-->
-            <!--android:src="@drawable/ic_mode_edit_white_36dp"-->
-            <!--android:background="@drawable/oval_button"-->
-            <!--android:padding="4dp"-->
-            <!--/>-->
-
-
-
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -73,7 +55,7 @@
                 />
 
             <android.support.v7.widget.CardView
-                android:id="@+id/cardCommand"
+                android:id="@+id/cardServerCode"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 card_view:cardCornerRadius="4dp"
@@ -90,24 +72,13 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:textAppearance="?android:attr/textAppearanceSmall"
-                        android:text="Command"
-                        android:textStyle="bold"
-                        android:layout_marginTop="5dp"
-                        android:layout_marginBottom="10dp"
-                        android:layout_marginLeft="5dp"
-                        />
-
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:textAppearance="?android:attr/textAppearanceSmall"
-                        android:text="Schema Name"
+                        android:text="Endpoint"
                         android:textStyle="bold"
                         android:layout_marginTop="10dp"
                         android:layout_marginLeft="10dp"
                         />
                     <TextView
-                        android:id="@+id/textSchemaName"
+                        android:id="@+id/textEndpoint"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:textAppearance="?android:attr/textAppearanceSmall"
@@ -119,13 +90,13 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:textAppearance="?android:attr/textAppearanceSmall"
-                        android:text="Schema Version"
+                        android:text="Executor Access Token"
                         android:textStyle="bold"
                         android:layout_marginTop="10dp"
                         android:layout_marginLeft="10dp"
                         />
                     <TextView
-                        android:id="@+id/textSchemaVersion"
+                        android:id="@+id/textExecutorAccessToken"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:textAppearance="?android:attr/textAppearanceSmall"
@@ -137,52 +108,18 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:textAppearance="?android:attr/textAppearanceSmall"
-                        android:text="Target ID"
+                        android:text="Target App ID"
                         android:textStyle="bold"
                         android:layout_marginTop="10dp"
                         android:layout_marginLeft="10dp"
                         />
                     <TextView
-                        android:id="@+id/textTargetID"
+                        android:id="@+id/textTargetAppID"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:textAppearance="?android:attr/textAppearanceSmall"
                         android:layout_marginTop="10dp"
                         android:layout_marginLeft="20dp"
-                        />
-
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:textAppearance="?android:attr/textAppearanceSmall"
-                        android:text="Issuer ID"
-                        android:textStyle="bold"
-                        android:layout_marginTop="10dp"
-                        android:layout_marginLeft="10dp"
-                        />
-                    <TextView
-                        android:id="@+id/textIssuerID"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:textAppearance="?android:attr/textAppearanceSmall"
-                        android:layout_marginTop="10dp"
-                        android:layout_marginLeft="20dp"
-                        />
-
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:textAppearance="?android:attr/textAppearanceSmall"
-                        android:text="Actions"
-                        android:textStyle="bold"
-                        android:layout_marginTop="10dp"
-                        android:layout_marginLeft="10dp"
-                        />
-                    <ListView
-                        android:id="@+id/listViewActions"
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        android:layout_margin="10dp"
                         />
                 </LinearLayout>
             </android.support.v7.widget.CardView>
